syntax = "proto3";

option csharp_namespace = "Catalog.API";

package prices;


service PriceProtoService {
    rpc GetPrices (GetPricesRequest) returns (PricesResponse);
}

message GetPricesRequest {
    repeated string productIdList = 1;
}

message PricesResponse {
    repeated PriceInfo prices= 1;
}


message PriceInfo {
    string Id = 1;
    double Price = 2;
}